Fixing layout issues

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -74,11 +74,16 @@ header {
         text-decoration: none;
         background-color: $color-pre-order;
         border-radius: 8px;
+
+        &:hover {
+            background-color: #162542;
+            color: #FFF;
+        }
     }
 
     & img {
         border-radius: 0;
-    } 
+    }
 }
 
 .push-down {
@@ -97,6 +102,10 @@ header {
     color: #fff;
     font-weight: 500;
     border-radius: 8px;
+
+    &:hover {
+        background-color: #FF9B62;
+    }
 }
 
 .keyboard {
@@ -139,6 +148,7 @@ header {
     margin-bottom: 4rem;
     margin-top: 4rem;
     display: block;
+    width: 100%;
 }
 
 .advantages {
@@ -217,6 +227,7 @@ footer {
     body {
         padding-left: 10.3125rem;
         padding-right: 10.3125rem;
+        overflow-x: hidden;
     }
 
     .image-1 {
@@ -243,5 +254,23 @@ footer {
         bottom: 0;
         left: 0;
         transform: translateX(-296.5px);
+    }
+
+    .description {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        gap: 10px;
+        padding-left: 7.8125rem;
+        max-width: 27rem;
+        & h2 {
+            line-height: 36px;
+        }
+    }
+
+    .advantages {
+        padding-top: 10rem;
     }
 }
